2002-06-03  Marcus Brinkmann  <marcus@gnu.org>

	* console.c (vcons_release): Fix last change.

2002-06-02  Marcus Brinkmann  <marcus@gnu.org>

	* console.c (vcons_lookup): Correct nesting.
	(vcons_release): Negate if condition.
	Delete VCONS_LIST in CONS with last virtual console.

2002-03-23  James A. Morrison  <ja2morri@uwaterloo.ca>

	* main.c (main): Use error, not fprintf and exit.

2002-03-17  Roland McGrath  <roland@frob.com>

	* mutations.h (TIOCTL_IMPORTS): New macro.
	* priv.h: Protect from multiple inclusion.

	* vga.c (vga_init): io_perm -> ioperm.
	(vga_deinit): Likewise.

	* dynafont.c: Include <string.h>.
	* focus.c: Likewise.
	* vga.c: Likewise.
	* vga-display.c: Likewise.

	* main.c: Include <error.h>.
	(main): Use `error' instead of perror + exit.
	(console_mode, console_owner, console_group): Use *_t, not int.

2002-03-17  Marcus Brinkmann  <marcus@gnu.org>

	* bdf.c, bdf.h, console.c, console.h, display.h, dynafont.c,
	dynafont.h, focus.c, focus.h, input.h, main.c, Makefile,
	mutations.h, priv.h, vga.c, vga-display.c, vga.h, vga-hw.h: New files.