@@ -1,3 +1,11 @@
+2002-06-04  Marcus Brinkmann  <marcus@gnu.org>
+
+	* display.h: Renamed to ...
+	* display-drv.h: ... this.
+	* Makefile (LCLHDRS): Rename display.h to display-drv.h.
+	* console.c: Include "display-drv.h" instead "display.h".
+	* vga-display.c: Likewise.
+
 2002-06-03  Marcus Brinkmann  <marcus@gnu.org>
 
 	* console.c (vcons_release): Fix last change.
